test/libsolidity/syntaxTests/nameAndTypeResolution/529_fallback_marked_public.sol
contract C {
    function () public { }
}
// ----
// TypeError: (17-39): Fallback function must be defined as "external".
